--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calif",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@mantine/core": "^4.2.12",
     "@mantine/hooks": "^4.2.12",
@@ -14,8 +15,10 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "tabler-icons-react": "^1.52.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
