--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "prepare": "husky install",
     "pre-commit": "tsc && lint-staged"
   },
   "eslintConfig": {
